--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>{{ name }}</title>
+    <title>豐原</title>
   </head>
   <body>
     <app></app>
